added questions for the quizz

--- a/Coder_Quizz/src/index.css
+++ b/Coder_Quizz/src/index.css
@@ -30,6 +30,6 @@ button{
 
 button:hover{
   background: linear-gradient(90deg,
-              rgba(184,84,232,1) 0%
+              rgba(184,84,232,1) 0%,
               rgba(132,53,222,1) 100%);
 }
