--- a/Coder_Quizz/src/index.css
+++ b/Coder_Quizz/src/index.css
@@ -5,6 +5,11 @@
   color: #fff;
 }
 
+h1{
+  margin-bottom: 1rem;    
+  text-shadow: 2px 2px 20px #8435de;
+  }
+
 body,
 html{
   min-height: 100vh;
