--- a/Coder_Quizz/src/App.css
+++ b/Coder_Quizz/src/App.css
@@ -11,4 +11,19 @@
   margin-bottom: 2rem;  
   font-size: 3rem;
   z-index: 10;
+  animation: blink 3s 4;
+}
+
+
+
+@keyframes blink {
+  0% {
+    text-shadow: 2px 2px 20px #a862f8;
+  }
+  50% {
+    text-shadow: 0 0 10px #8435de, 0 0 20px #8435de, 0 0 25px #8435de, 0 0 40px #8435de;
+  }
+  100% {
+    text-shadow: 2px 2px 20px #a862f8;
+  }
 }
