--- a/Coder_Quizz/src/components/Options.css
+++ b/Coder_Quizz/src/components/Options.css
@@ -13,7 +13,7 @@
 }
 
 #options-container p{
-    margin-bottom: 0;
+    margin-bottom: 0rem;
 }
 
 /*Show if answer is correct or not*/
@@ -26,3 +26,10 @@
     background-color: #3c0370;
     opacity: .4;
 }
+
+@media only screen and (max-width: 600px) {
+    .option{
+        padding: 0.8rem;
+        margin-bottom: 0.6rem;
+    }
+  }
