--- a/Coder_Quizz/src/App.css
+++ b/Coder_Quizz/src/App.css
@@ -7,6 +7,7 @@
   text-align: center;
   padding-left: 1rem;
   padding-right: 1rem;
+
 }
 
 .app h1{
@@ -23,7 +24,7 @@
     text-shadow: 2px 2px 20px #a862f8;
   }
   50% {
-    text-shadow: 0 0 10px #8435de, 0 0 20px #8435de, 0 0 25px #8435de, 0 0 40px #8435de;
+    text-shadow: 0 0 10px #a767f1, 0 0 20px #8435de, 0 0 25px #8435de, 0 0 40px #a767f1;
   }
   100% {
     text-shadow: 2px 2px 20px #a862f8;
