--- a/Coder_Quizz/src/App.css
+++ b/Coder_Quizz/src/App.css
@@ -1,33 +1,38 @@
+
+
 .app {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh; /* Set container height to occupy the full viewport height */
+  min-height: 100vh;
+  height: 100%; /* Set container height to occupy the full viewport height */
   text-align: center;
   padding-left: 1rem;
   padding-right: 1rem;
-
+  box-sizing: border-box;
 }
 
 .app h1{
-  margin-bottom: 2rem;  
+  margin-bottom: 2rem; 
+  margin-top: 1rem; 
   font-size: 3rem;
   z-index: 10;
-  animation: blink 3s infinite;
+  text-shadow: 2px 4px 10px #8435de;
+  animation: blink 4s infinite;
 }
 
 
 
 @keyframes blink {
   0% {
-    text-shadow: 2px 2px 20px #a862f8;
+    text-shadow: 2px 4px 10px #8435de;
   }
   50% {
-    text-shadow: 0 0 10px #a767f1, 0 0 20px #8435de, 0 0 25px #8435de, 0 0 40px #a767f1;
+    text-shadow: 0px 0px 10px #8435de, 0 0 10px #df63ed, 0 0 10px #df63ed, 0 0 20px #8435de;
   }
   100% {
-    text-shadow: 2px 2px 20px #a862f8;
+    text-shadow: 2px 2px 20px #8435de;
   }
 }
 
@@ -36,5 +41,6 @@
     margin-bottom: 1rem;  
     font-size: 2rem;
   }
+
   
 }
