--- a/Coder_Quizz/src/index.css
+++ b/Coder_Quizz/src/index.css
@@ -12,13 +12,16 @@ h1{
 
 body,
 html{
-  min-height: 100vh;
   height: 100%;
   background-color: #1c1c1c;
+  margin: 0;
+  padding: 0;
 }
 
 img{
   max-width:100%;
+  max-height: 100%;
+
 }
 
 button{
