--- a/Coder_Quizz/src/index.css
+++ b/Coder_Quizz/src/index.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   font-family: "Raleway", sans-serif;
-  color: #fff;
+  color: #fff; box-sizing: border-box; 
 }
 
 h1{
@@ -15,8 +15,7 @@ html{
   height: 100%;
   background-color: #1c1c1c;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 img{
   max-width:100%;
